...
            autoCorrect={false}
            returnKeyType="next"
            autoFocus
            labelBackground={theme.colors.surface}
          />
          <Input
            label="Email"
            value={draftEmail}
            onChangeText={setDraftEmail}
            placeholder="Enter your email address"
            keyboardType="email-address"
            textContentType="emailAddress"
            autoCapitalize="none"
...
